--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -53,7 +53,7 @@
 
 .product-grill{
     width: 100%;
-    padding: 0 1rem;
+    /* padding: 0 1rem; */
     gap: .1rem;
     display: grid;
     place-items: center;
